--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.17",
+    "framer-motion": "^12.23.25",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-datepicker": "^8.10.0",
     "react-dom": "^19.2.0",
+    "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.10.1",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
