--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aos": "^2.3.4",
     "framer-motion": "^12.23.25",
     "gsap": "^3.14.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.555.0",
     "ogl": "^1.0.11",
     "react": "^19.2.0",
