--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.17",
     "aos": "^2.3.4",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.25",
     "gsap": "^3.14.1",
     "lottie-react": "^2.4.1",
